# json-validators

./: .gitignore  README.md
benchmark/: benchmark.sh  generate_testdata.py
cpp/: CMakeLists.txt  validator.cpp  validator_rapidjson.cpp
cpp/.cache/clangd/index/: validator.cpp.4838F9E8C0AD4B4A.idx
docs/plans/: 2026-03-12-nodejs-design.md  2026-03-12-nodejs-implementation.md  2026-03-13-cpp-rapidjson-design.md  2026-03-13-cpp-rapidjson.md  2026-03-14-benchmark-file-count-design.md  2026-03-14-benchmark-files-flag.md  2026-03-14-go-fast-variant-design.md  2026-03-14-go-fast-variant.md  2026-03-14-go-stdlib-optimization-design.md  2026-03-14-go-stdlib-optimization.md
go/: go.mod  go.sum  validator.go
go/fast/: go.mod  go.sum  validator_fast.go
nodejs/: package-lock.json  package.json  tsconfig.json
nodejs/src/: validator.ts
python/: validator.py
rust/: Cargo.toml
rust/src/: main.rs
schema/: complex_schema.json  invalid_example.json  simple_schema.json  valid_example.json
