[package]
name = "json-validator"
version = "1.0.0"
edition = "2021"
description = "Validate a JSON file against a JSON Schema"

[[bin]]
name = "json-validator"
path = "src/main.rs"

[dependencies]
# JSON parsing
serde_json = "1.0"

# JSON Schema validation
jsonschema = "0.17"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Colored terminal output
colored = "2.1"
